secondfile/objects/Author__c.object
<CustomObject>
    <fields>
        <fullName>Author_ID__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Author ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Author_Link__c</fullName>
        <label>Author Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Author_Picture__c</fullName>
        <formula>IF (Author_Link__c = &quot;&quot;, &quot;&quot;, IMAGE(Author_Link__c,&quot;Author Photo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Author Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Author</label>
    <listViews>
        <fullName>All_Authors</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Company__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Authors</label>
    </listViews>
    <nameField>
        <label>Author Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Author</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>